--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,26 @@
 																			>
 																			<label for="filterDart" class="form__label categories__checkbox_label">dart</label>
 																		</li>
-
+																		<li class="categories__list_item">
+																			<input
+																				id="filterTest"
+																				class="form__input categories__checkbox_input"
+																				type="checkbox"
+																				name="test"
+																				value="test"
+																			>
+																			<label for="filterTest" class="form__label categories__checkbox_label">test</label>
+																		</li>
+																		<li class="categories__list_item">
+																			<input
+																				id="filterReact"
+																				class="form__input categories__checkbox_input"
+																				type="checkbox"
+																				name="react"
+																				value="react"
+																			>
+																			<label for="filterReact" class="form__label categories__checkbox_label">react</label>
+																		</li>
 																	</ul>
 																</div>
 															</div>
@@ -234,32 +253,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="gallery">
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/test/300x300.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/test/400x300.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/test/300x400.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/gallery/default.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-									</div>
+									<div class="gallery"></div>
 									<div class="pagination">
 										<div class="pagination__container">
 											<div class="pagination__body">
@@ -271,12 +265,8 @@
 														/>
 													</svg>
 												</div>
-												<div class="pagination__item pagination__item_number" data-value="1">1</div>
-												<div class="pagination__item pagination__item_number" data-value="2">2</div>
-												<div class="pagination__item pagination__item_current" data-value="3">3</div>
-												<div class="pagination__item pagination__item_number" data-value="4">4</div>
-												<div class="pagination__item pagination__item_number" data-value="5">5</div>
-												<div class="pagination__item pagination__item_arrow-right" data-value="5">
+												<div class="numbers"></div>
+												<div class="pagination__item pagination__item_arrow-right" data-value="1">
 													<svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
 														<path fill="#c0c0c0"
 															d="M40.8036 14.5833C42.6597 14.5833 43.5892 16.8274 42.2767 18.1398L26.473 33.9435C25.6595 34.7571 24.3403 34.7571 23.5267 33.9435L7.72302 18.1398C6.41058 16.8274 7.3401 14.5833 9.19614 14.5833H24.9999H40.8036Z" />
@@ -298,70 +288,7 @@
 									<h1 class="topic__title">Skills</h1>
 									<h3 class="topic__description">Skills proficiency statistics</h3>
 								</div>
-								<div class="content">
-									<div class="skill">
-										<div class="skill__charter skill__charter_blue">Programming Languages</div>
-										<div class="skill__list">
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_orange">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="30" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_orange">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="30" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_orange">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="30" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_orange">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="30" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_orange">
-												<div class="skill__item_title">Javascript</div>
-												<div data-value="30" class="skill__item_progress"></div>
-											</div>
-										</div>
-									</div>
-									<div class="skill">
-										<div class="skill__charter skill__charter_orange">Languages</div>
-										<div class="skill__list">
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">English</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_orange">
-												<div class="skill__item_title">Русский</div>
-												<div data-value="30" class="skill__item_progress"></div>
-											</div>
-											<div class="skill__item skill__item_blue">
-												<div class="skill__item_title">Український</div>
-												<div data-value="80" class="skill__item_progress"></div>
-											</div>
-										</div>
-									</div>
-								</div>
+								<div class="content"></div>
 							</div>
 						</div>
 					</section>
