--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 			<div class="header__body">
 				<!-- LOGO -->
 				<div class="logo">
-					<a href="/" class="logo__container">
+					<a href="#" class="logo__container">
 						<img src="./img/logo/logo60px.svg" alt="Logo.">
 					</a>
 				</div>
